build/log/idf_py_stdout_output_9768
[1/80] Building C object esp-idf/espcoredump/CMakeFiles/__idf_espcoredump.dir/src/core_dump_init.c.obj
[2/80] Building C object esp-idf/esp_local_ctrl/CMakeFiles/__idf_esp_local_ctrl.dir/proto-c/esp_local_ctrl.pb-c.c.obj
[3/80] Building C object esp-idf/espcoredump/CMakeFiles/__idf_espcoredump.dir/src/core_dump_sha.c.obj
[4/80] Building C object esp-idf/espcoredump/CMakeFiles/__idf_espcoredump.dir/src/core_dump_crc.c.obj
[5/80] Building C object esp-idf/HC-SR04_sensor/CMakeFiles/__idf_HC-SR04_sensor.dir/HC-SR04_sensor.c.obj
FAILED: esp-idf/HC-SR04_sensor/CMakeFiles/__idf_HC-SR04_sensor.dir/HC-SR04_sensor.c.obj 
ccache D:\express\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/workspace/esp32/Bai-tap/HTTP-ledcontrol/build/config -ID:/workspace/esp32/Bai-tap/HTTP-ledcontrol/components/HC-SR04_sensor/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/newlib/platform_include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/freertos/config/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/freertos/config/include/freertos -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/freertos/config/xtensa/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/freertos/FreeRTOS-Kernel/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/freertos/esp_additions/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_hw_support/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_hw_support/include/soc -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_hw_support/include/soc/esp32 -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_hw_support/dma/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_hw_support/ldo/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_hw_support/debug_probe/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_hw_support/port/esp32/. -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_hw_support/port/esp32/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/heap/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/heap/tlsf -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/log/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/soc/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/soc/esp32 -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/soc/esp32/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/soc/esp32/register -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/hal/platform_port/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/hal/esp32/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/hal/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_rom/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_rom/esp32/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_rom/esp32/include/esp32 -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_rom/esp32 -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_common/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_system/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_system/port/soc -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/esp_system/port/include/private -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/xtensa/esp32/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/xtensa/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/xtensa/deprecated_include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/lwip/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/lwip/include/apps -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/lwip/include/apps/sntp -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/lwip/lwip/src/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/lwip/port/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/lwip/port/freertos/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/lwip/port/esp32xx/include -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/lwip/port/esp32xx/include/arch -ID:/express/Espressif/frameworks/esp-idf-v5.4.1/components/lwip/port/esp32xx/include/sys -ID:/workspace/esp32/Bai-tap/HTTP-ledcontrol/managed_components/vgerwen__hcsr04/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/workspace/esp32/Bai-tap/HTTP-ledcontrol=. -fmacro-prefix-map=D:/express/Espressif/frameworks/esp-idf-v5.4.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/HC-SR04_sensor/CMakeFiles/__idf_HC-SR04_sensor.dir/HC-SR04_sensor.c.obj -MF esp-idf\HC-SR04_sensor\CMakeFiles\__idf_HC-SR04_sensor.dir\HC-SR04_sensor.c.obj.d -o esp-idf/HC-SR04_sensor/CMakeFiles/__idf_HC-SR04_sensor.dir/HC-SR04_sensor.c.obj -c D:/workspace/esp32/Bai-tap/HTTP-ledcontrol/components/HC-SR04_sensor/HC-SR04_sensor.c
D:/workspace/esp32/Bai-tap/HTTP-ledcontrol/components/HC-SR04_sensor/HC-SR04_sensor.c:13:8: error: unknown type name 'hcsr04_dev_t'
   13 | static hcsr04_dev_t* sensor = NULL;
      |        ^~~~~~~~~~~~
D:/workspace/esp32/Bai-tap/HTTP-ledcontrol/components/HC-SR04_sensor/HC-SR04_sensor.c: In function 'ultrasonic_sensor_init':
D:/workspace/esp32/Bai-tap/HTTP-ledcontrol/components/HC-SR04_sensor/HC-SR04_sensor.c:17:14: error: implicit declaration of function 'hcsr04_create_sensor' [-Wimplicit-function-declaration]
   17 |     sensor = hcsr04_create_sensor(TRIGGER_PIN, ECHO_PIN);
      |              ^~~~~~~~~~~~~~~~~~~~
D:/workspace/esp32/Bai-tap/HTTP-ledcontrol/components/HC-SR04_sensor/HC-SR04_sensor.c:17:12: error: assignment to 'int *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
   17 |     sensor = hcsr04_create_sensor(TRIGGER_PIN, ECHO_PIN);
      |            ^
D:/workspace/esp32/Bai-tap/HTTP-ledcontrol/components/HC-SR04_sensor/HC-SR04_sensor.c: In function 'ultrasonic_sensor_measure':
D:/workspace/esp32/Bai-tap/HTTP-ledcontrol/components/HC-SR04_sensor/HC-SR04_sensor.c:31:21: error: implicit declaration of function 'hcsr04_get_distance' [-Wimplicit-function-declaration]
   31 |     esp_err_t res = hcsr04_get_distance(sensor, &dist_mm);
      |                     ^~~~~~~~~~~~~~~~~~~
[6/80] Building C object esp-idf/esp_local_ctrl/CMakeFiles/__idf_esp_local_ctrl.dir/src/esp_local_ctrl_transport_httpd.c.obj
[7/80] Building C object esp-idf/espcoredump/CMakeFiles/__idf_espcoredump.dir/src/core_dump_common.c.obj
[8/80] Building C object esp-idf/espcoredump/CMakeFiles/__idf_espcoredump.dir/src/core_dump_binary.c.obj
[9/80] Building C object esp-idf/espcoredump/CMakeFiles/__idf_espcoredump.dir/src/core_dump_elf.c.obj
[10/80] Linking C static library esp-idf\wear_levelling\libwear_levelling.a
[11/80] Building C object esp-idf/espcoredump/CMakeFiles/__idf_espcoredump.dir/src/core_dump_flash.c.obj
[12/80] Building C object esp-idf/espcoredump/CMakeFiles/__idf_espcoredump.dir/src/core_dump_uart.c.obj
[13/80] Building C object esp-idf/espcoredump/CMakeFiles/__idf_espcoredump.dir/src/port/xtensa/core_dump_port.c.obj
[14/80] Building C object esp-idf/fatfs/CMakeFiles/__idf_fatfs.dir/diskio/diskio.c.obj
ninja: build stopped: subcommand failed.
